--- a/namespace/argocd/application/argocd.Application.yaml
+++ b/namespace/argocd/application/argocd.Application.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/jonnyhoeven/workshop.git
+    repoURL: https://github.com/abessole/workshop.git
     targetRevision: HEAD
     path: namespace/argocd
     directory:
